--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -33,7 +33,7 @@
             </div>
 
             <div>
-                <label for="description">Description</label>
+                <label for="description">SuperDescription</label>
                 <textarea id="description" th:field="*{description}" rows="3" maxlength="999"></textarea>
             </div>
 
