--- a/src/main/resources/templates/task/list.html
+++ b/src/main/resources/templates/task/list.html
@@ -29,7 +29,7 @@
       <thead>
       <tr>
         <th>Title</th>
-        <th>Description</th>
+        <th>SuperDescription</th>
         <th>Due Date</th>
         <th>Priority</th>
         <th>Status</th>
